<resources>
    <string name="app_name">Finger Master Game</string>
    <string name="title_activity_navigation_drawer_menu">navigationDrawerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GAME MASTER</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Home</string>
    <string name="menu_players_list">Fingers</string>
    <string name="menu_acces_history">Access History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_data_model">player_data_model</string>
    <string name="player_data_name">player_data_name</string>
    <string name="player_data_fingers">player_data_fingers</string>
    <string name="player_data_player_name_title">PLAYER NAME:</string>
    <string name="player_data_issue_title">ISSUE:</string>
    <string name="manage_player_issue_hint_text">ISSUE DESCRIPTION</string>
    <string name="issue_empty">Issue description is blank</string>
    <string name="new_player_name_tittle">New player name:</string>
    <string name="new_player_name_hint">Player name</string>
    <string name="player_data_file_name">playersData.json</string>
    <string name="data_access_file_name">dataAccess.json</string>
    <string name="error_empty_name">Name of player is empty!</string>
    <string name="error_existing_name">Name already exist</string>

    <!-- Accesibility -->
    <string name="logo_description">App logo</string>
</resources>