<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fingermastergame.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/player_data"
        android:name="com.example.fingermastergame.ui.playerHistory.PlayersListFragment"
        android:label="@string/menu_players_list"
        tools:layout="@layout/fragment_players_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fingermastergame.ui.accessHistory.AccessHistory"
        android:label="@string/menu_acces_history"
        tools:layout="@layout/fragment_access_history" />
</navigation>